--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -27,7 +27,7 @@
                     {{#each burgers}}
                     {{#unless devoured}}
                     <span><strong> {{this.id}} - {{this.burger_name}}</strong></span>
-                    <button type="button" class="eatburger btn btn-warning" id="eatbutton" data-id= "{{this.id}}" data-newDevoured={{devour}}><span class="fa fa-usd"</span></button>
+                    <button type="button" class="eatburger btn btn-warning" id="eatbutton" data-id= "{{this.id}}" data-newDevoured={{devour}}><span class="fa fa-usd"></span></button>
                     <br>
                     {{/unless}}
                     {{/each}}
@@ -45,7 +45,7 @@
                     {{#each burgers}}
                     {{#if devoured}}
                     <span><strong> {{this.id}} - {{this.burger_name}}</strong></span>
-                    <button type="button" class="eatburger btn btn-danger" id="trashbutton" data-id= "{{this.id}}" data-newDevoured={{devour}}><span class="fa fa-trash"</span></button>
+                    <button type="button" class="trashburger btn btn-danger" id="trashbutton" data-id= "{{this.id}}" data-newDevoured={{devour}}><span class="fa fa-trash"</span></button>
                     <br>
                     {{/if}}
                     {{/each}}
