--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,13 +8,16 @@
     <title>Burger App</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-    <script src="/assets/js/burger.js"></script>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
 </head>
 
 <body>
 
-    {{{ body}}}
 
-    
+    {{{ body }}}
+	<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script src="/assets/js/burger.js"></script>
+
 </body>
 </html>
