--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,7 +1,7 @@
 <div class="container">
 
     <div class="jumbotron">
-        <h1>Burger Time!</h1>
+        <h1 class="glow">Burger Time!</h1>
         <br>
         <h2>What kind of burger do you want?</h2>
         <panel>
@@ -19,40 +19,33 @@
 </div>
 <div class="row">
     <div class="col-sm-6">
-        <div class="panel panel-default">
-            <div class="panel-heading" id="leftside"><strong>Order Your Burger</strong></div>
+            <div class="panel-heading glow" id="leftside"><strong>Your Burgers</strong></div>
             <div class="panel-body">
-                
                 <ul>
                     {{#each burgers}}
                     {{#unless devoured}}
-                    <span><strong> {{this.id}} - {{this.burger_name}}</strong></span>
-                    <button type="button" class="eatburger btn btn-warning" id="eatbutton" data-id= "{{this.id}}" data-newDevoured={{devour}}><span class="fa fa-usd"></span></button>
+                    <span><strong class="glow"> {{this.id}} - {{this.burger_name}}</strong></span>
+                    <button type="button" class="eatburger btn btn-warning" id="eatbutton" data-id= "{{this.id}}" data-newDevoured={{devour}}><span class="fa fa-spoon"></span></button>
                     <br>
                     {{/unless}}
                     {{/each}}
                 </ul>
-
             </div>
-        </div>
     </div>
     <div class="col-sm-6">
-        <div class="panel panel-default">
-            <div class="panel-heading" id="leftside"><strong>Devour Your Burger</strong></div>
+            <div class="panel-heading glow" id="rightside"><strong>Devoured Burgers</strong></div>
             <div class="panel-body">
                 
                 <ul>
                     {{#each burgers}}
                     {{#if devoured}}
-                    <span><strong> {{this.id}} - {{this.burger_name}}</strong></span>
+                    <span><strong class="glow"> {{this.id}} - {{this.burger_name}}</strong></span>
                     <button type="button" class="trashburger btn btn-danger" id="trashbutton" data-id= "{{this.id}}" data-newDevoured={{devour}}><span class="fa fa-trash"</span></button>
                     <br>
                     {{/if}}
                     {{/each}}
                 </ul>
-
             </div>
-        </div>
     </div>
 
 </div>
