--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -24,7 +24,7 @@
                 <ul>
                     {{#each burgers}}
                     {{#unless devoured}}
-                    <span><strong class="glow"> {{this.id}} - {{this.burger_name}}</strong></span>
+                    <span><strong > {{this.id}} - {{this.burger_name}}</strong></span>
                     <button type="button" class="eatburger btn btn-warning" id="eatbutton" data-id= "{{this.id}}" data-newDevoured={{devour}}><span class="fa fa-spoon"></span></button>
                     <br>
                     {{/unless}}
@@ -39,7 +39,7 @@
                 <ul>
                     {{#each burgers}}
                     {{#if devoured}}
-                    <span><strong class="glow"> {{this.id}} - {{this.burger_name}}</strong></span>
+                    <span><strong > {{this.id}} - {{this.burger_name}}</strong></span>
                     <button type="button" class="trashburger btn btn-danger" id="trashbutton" data-id= "{{this.id}}" data-newDevoured={{devour}}><span class="fa fa-trash"</span></button>
                     <br>
                     {{/if}}
